Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1314

Broken handling of file patterns in advanced find

XMLWordPrintable

    • d5cdca00aa8d920671b1fce0ab54070d9dcc5661

      Two examples for reproducing:
      Open Qt Creator as project. Open advanced find (Ctrl + Shift + F).
      Search for "FakeVimSettings::FakeVimSettings()", scope all projects, no options checked, file pattern "*": It is found in src/plugins/fakevim/fakevimactions.cpp
      Try the same with file pattern "fakevim*": Nothing is found.
      Try file pattern "fakevim*.cpp": Occurrence is found.


      Search for "RegistryAccess", with file pattern "fakevim*.cpp": It is found in many files but none of these matches the pattern.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rlohning Robert Löhning
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes