Fixed handling of file patterns similar to "filename*"

Task-Nr: QTCREATORBUG-1314